Bug 811212 - Make most cycle collector assertions fatal - r=mccr8